--- a/package.json
+++ b/package.json
@@ -4,12 +4,337 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^27.3.0",
+    "@ag-grid-community/core": "^27.3.0",
+    "@ag-grid-community/react": "^27.3.0",
+    "@ag-grid-enterprise/charts": "^27.3.0",
+    "@ag-grid-enterprise/column-tool-panel": "^27.3.0",
+    "@ag-grid-enterprise/excel-export": "^27.3.0",
+    "@ag-grid-enterprise/filter-tool-panel": "^27.3.0",
+    "@ag-grid-enterprise/master-detail": "^27.3.0",
+    "@ag-grid-enterprise/menu": "^27.3.0",
+    "@ag-grid-enterprise/set-filter": "^27.3.0",
+    "@apollo/client": "^3.2.7",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@golevelup/nestjs-discovery": "^3.0.0",
+    "@golevelup/nestjs-graphql-request": "^0.1.13",
+    "@golevelup/nestjs-hasura": "^3.0.2",
+    "@golevelup/nestjs-modules": "^0.6.1",
+    "@golevelup/profiguration": "^0.2.1",
+    "@hookform/devtools": "^4.2.2",
+    "@hookform/resolvers": "2.9.0",
+    "@math.gl/web-mercator": "^3.5.7",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/lab": "^5.0.0-alpha.72",
+    "@mui/material": "^5.5.0",
+    "@mui/styles": "^5.5.0",
+    "@nestjs-modules/mailer": "1.8.1",
+    "@nestjs/axios": "^0.1.0",
+    "@nestjs/bull": "^0.6.1",
+    "@nestjs/common": "9.2.1",
+    "@nestjs/core": "9.2.1",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "9.2.1",
+    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/swagger": "6.1.4",
+    "@nestjs/terminus": "^9.1.1",
+    "@ogma/logger": "^2.5.0",
+    "@ogma/nestjs-module": "^4.2.2",
+    "@ogma/styler": "^1.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@react-pdf-viewer/core": "3.3.2",
+    "@react-pdf-viewer/default-layout": "3.3.2",
+    "@sentry/node": "^6.19.7",
+    "@sentry/react": "^7.38.0",
+    "@sentry/tracing": "^7.38.0",
+    "@sentry/types": "^6.19.7",
+    "@supercharge/promise-pool": "^2.0.0",
+    "@swc/helpers": "~0.3.3",
+    "@turf/bbox": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
+    "ag-charts-community": "^5.3.0",
+    "ag-charts-react": "^5.3.0",
+    "amazon-s3-uri": "^0.1.1",
+    "apollo-boost": "^0.4.9",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
+    "aws-sdk": "^2.1299.0",
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "bull": "^3.29.3",
+    "bull-board": "^0.10.0",
+    "change-case": "^4.1.2",
+    "chart.js": "^2.9.4",
+    "class-transformer": "0.4.0",
+    "class-transformer-validator": "^0.9.1",
+    "class-validator": "^0.13.1",
+    "classnames": "^2.3.1",
+    "content-disposition": "^0.5.4",
+    "cookie-parser": "^1.4.6",
+    "copy-to-clipboard": "^3.3.1",
+    "core-js": "^3.6.5",
+    "cross-fetch": "^3.1.5",
+    "css-mediaquery": "^0.1.2",
+    "date-fns": "^2.22.1",
+    "dayjs": "^1.10.6",
+    "dexie": "^3.2.3",
+    "docx": "^5.5.0",
+    "dompurify": "^2.3.1",
+    "dotenv": "^8.6.0",
+    "ejs": "^3.1.6",
+    "exceljs": "^4.2.1",
+    "express-rate-limit": "^5.3.0",
+    "faker": "^5.5.3",
+    "filesize": "^8.0.7",
+    "framer-motion": "^6.x.x",
+    "fuse.js": "^6.4.6",
+    "generate-password": "^1.7.0",
+    "genql-runtime": "^1.1.28",
+    "graphql": "^15.8.0",
+    "graphql-request": "^4.2.0",
+    "graphql-tag": "^2.12.6",
+    "helmet": "^4.6.0",
+    "image-size": "^1.0.1",
+    "immer": "^9.0.12",
+    "initials": "^3.1.2",
+    "js-file-download": "^0.4.12",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
+    "mapbox-gl": "^2.9.1",
+    "mjml": "^4.12.0",
+    "mobile-drag-drop": "^2.3.0-rc.2",
+    "multer": "^1.4.2",
+    "multer-google-storage": "^1.3.0",
+    "multer-s3": "^2.9.0",
+    "nanoid": "^3.x",
+    "nest-commander": "^2.5.0",
+    "nodemailer": "^6.6.3",
+    "notistack": "^2.0.3",
+    "object-hash": "^2.2.0",
+    "papaparse": "^5.3.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-saml": "^2.2.0",
+    "path-browserify": "^1.0.1",
+    "pdf2pic": "^2.1.4",
+    "pdfjs-dist": "^2.14.305",
+    "pg": "^8.6.0",
+    "pluralize": "^8.0.0",
+    "pouchdb-adapter-idb": "^7.2.2",
+    "query-string": "^6.14.1",
+    "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-chartjs-2": "^2.11.2",
+    "react-color": "^2.19.3",
+    "react-cosmos": "^5.7.2",
+    "react-device-detect": "^1.17.0",
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
+    "react-fast-compare": "^3.2.0",
+    "react-full-screen": "^0.2.5",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "7.31.3",
+    "react-icons": "^4.3.1",
+    "react-image-lightbox": "^5.1.4",
+    "react-map-gl": "^7.0.16",
+    "react-merge-refs": "^1.1.0",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^5.3.0",
+    "react-router-dom-6": "npm:react-router-dom",
+    "react-router-last-location": "^2.0.1",
+    "react-sizeme": "^3.0.2",
+    "react-to-print": "^2.14.1",
+    "react-use": "^17.3.1",
+    "react-window": "^1.8.6",
+    "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
+    "request-ip": "^2.1.3",
+    "rxdb": "^12.5.3",
+    "rxjs": "^7.4.0",
+    "sharp": "^0.30.5",
+    "smoothscroll-polyfill": "^0.4.4",
+    "subscriptions-transport-ws": "^0.10.0",
+    "suspend-react": "^0.0.9",
+    "tinybase": "^3.0.3",
+    "tslib": "^2.3.0",
+    "uuid": "^8.3.2",
+    "victory": "^36.4.0",
+    "websocket": "^1.0.34",
+    "winston": "^3.3.3",
+    "zod": "^3.20.6",
+    "zustand": "4.3.2"
+  },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@golevelup/ts-jest": "^0.3.4",
+    "@graphql-codegen/add": "^3.2.0",
+    "@graphql-codegen/cli": "^2.3.1",
+    "@graphql-codegen/import-types-preset": "^2.1.20",
+    "@graphql-codegen/introspection": "^2.1.1",
+    "@graphql-codegen/typed-document-node": "^3.0.0",
+    "@graphql-codegen/typescript": "^2.4.2",
+    "@graphql-codegen/typescript-graphql-request": "^4.3.3",
+    "@graphql-codegen/typescript-operations": "^2.2.2",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.4",
+    "@nestjs/schematics": "9.0.4",
+    "@nestjs/testing": "9.2.1",
+    "@nestjs/throttler": "^3.0.0",
+    "@nrwl/cli": "15.4.0",
+    "@nrwl/eslint-plugin-nx": "15.4.0",
+    "@nrwl/jest": "15.4.0",
     "@nrwl/js": "15.4.0",
+    "@nrwl/nest": "15.4.0",
+    "@nrwl/node": "15.4.0",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/react": "15.4.0",
+    "@nrwl/web": "15.4.0",
     "@nrwl/workspace": "15.4.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@sentry/webpack-plugin": "^1.20.0",
+    "@svgr/webpack": "^6.1.2",
+    "@swc/cli": "~0.1.55",
+    "@swc/core": "^1.3.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/react-hooks": "^7.0.1",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bull": "^3.15.8",
+    "@types/bull-board": "^0.6.0",
+    "@types/content-disposition": "^0.5.5",
+    "@types/convict": "^5.2.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/css-mediaquery": "^0.1.1",
+    "@types/debug": "^4.1.7",
+    "@types/dompurify": "^2.3.3",
+    "@types/dotenv": "^8.2.0",
+    "@types/ejs": "^3.1.1",
+    "@types/entropy-string": "^4.2.0",
+    "@types/express": "4.17.14",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/faker": "5.5.7",
+    "@types/fs-extra": "^9.0.13",
+    "@types/ioredis": "^4.28.10",
+    "@types/jest": "^27.4.1",
+    "@types/jest-when": "^3.5.0",
+    "@types/jscodeshift": "^0.11.5",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.182",
+    "@types/mjml": "^4.7.0",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^2.7.12",
+    "@types/node": "16.11.7",
+    "@types/object-hash": "^2.2.1",
+    "@types/papaparse": "5.2.6",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-saml": "^1.1.3",
+    "@types/pg": "^8.6.5",
+    "@types/pluralize": "^0.0.29",
+    "@types/pouchdb-adapter-idb": "^6.1.4",
+    "@types/react": "^17.0.2",
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-color": "^3.0.6",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-router-dom": "^5.3.0",
+    "@types/react-window": "^1.8.5",
+    "@types/request-ip": "^0.0.37",
+    "@types/sharp": "^0.30.2",
+    "@types/shelljs": "^0.8.11",
+    "@types/smoothscroll-polyfill": "^0.3.1",
+    "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
+    "@types/validator": "^13.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript/analyze-trace": "^0.9.0",
+    "@welldone-software/why-did-you-render": "^7.0.1",
+    "@zendesk/laika": "^1.1.0",
+    "axios-mock-adapter": "^1.20.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "27.5.1",
+    "babel-plugin-lodash": "^3.3.4",
+    "c8": "^7.11.3",
+    "chalk": "^4.1.2",
+    "chalk-table": "^1.0.2",
+    "commander": "6.2.1",
+    "concurrently": "^5.3.0",
+    "coveralls": "^3.1.1",
+    "css-loader": "^6.4.0",
+    "deep-object-diff": "^1.1.9",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-formatter-summary": "^1.1.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^24.7.0",
+    "eslint-plugin-jsdoc": "^35.5.1",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-lodash": "^7.4.0",
+    "eslint-plugin-playwright": "^0.9.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "execa": "^5.1.1",
+    "fishery": "^2.2.2",
+    "folder-hash": "^4.0.1",
+    "fs-extra": "^10.0.0",
+    "genql-cli": "^1.1.28",
+    "glob": "^7.2.0",
+    "graphql": "^15.8.0",
+    "hasura-cli": "2.17.1",
+    "html-webpack-plugin": "4",
+    "http-server": "^14.1.1",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "jest-canvas-mock": "^2.3.1",
+    "jest-esm-transformer": "^1.0.0",
+    "jest-mock-axios": "4.5.0",
+    "jest-transform-stub": "^2.0.0",
+    "jest-when": "^3.5.1",
+    "jscodeshift": "^0.13.0",
+    "lcov-result-merger": "^3.1.0",
+    "leaked-handles": "^5.2.0",
+    "lint-staged": "^10.5.4",
+    "lodash": "^4.17.21",
+    "mockdate": "^3.0.5",
+    "msw": "^0.42.1",
     "nx": "15.4.0",
-    "prettier": "^2.6.2",
-    "typescript": "~4.8.2"
+    "prettier": "2.8.3",
+    "psqlformat": "^1.14.0",
+    "react-cosmos": "^5.7.2",
+    "react-refresh": "^0.10.0",
+    "rollup-plugin-visualizer": "^5.6.0",
+    "shelljs": "^0.8.5",
+    "style-loader": "^3.3.0",
+    "stylus": "^0.55.0",
+    "stylus-loader": "^7.1.0",
+    "supertest": "^6.2.3",
+    "swc-loader": "^0.2.3",
+    "tailwindcss": "3.2.4",
+    "ts-jest": "27.1.4",
+    "ts-node": "^10.8.0",
+    "tsconfig-paths": "^4.0.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "4.3.5",
+    "url-loader": "^4.1.1",
+    "wait-on": "^5.3.0",
+    "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-merge": "^5.8.0"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2"
   }
 }
